# xmas-agent

./: README.md  docker-compose.yml  main.py  pyproject.toml
src/agents/: document_parsing_agent.py  info_checker.py  menu_creator.py  orchestrator.py  recipe_agents.py
src/config/: __init__.py  client_factory.py  settings.py
src/database/: recipe_loader.py  vector_store.py
src/models/: __init__.py  menu.py  recipe.py  user_preferences.py
src/tools/: __init__.py  recipe_search.py
tests/agents/: test_info_checker.py  test_menu_creator.py  test_orchestrator.py  test_recipe_agents.py
