[project]
name = "xmas-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datapizza-ai>=0.0.9",
    "datapizza-ai-embedders-openai>=0.0.5",
    "datapizza-ai-tools-duckduckgo>=0.0.4",
    "datapizza-ai-vectorstores-qdrant>=0.0.6",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]
